--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 
 <body>
   <div class="container">
-    <!-- <input type="text" class="display" value="0"> -->
     <div class="calculator">
-      <input type="text" class="text" value="0">
-      <button class="one number">1</button>
-      <button class="two number">2</button>
-      <button class="three number">3</button>
-      <button class="four number">4</button>
-      <button class="five number">5</button>
-      <button class="six number">6</button>
-      <button class="seven number">7</button>
-      <button class="eight number">8</button>
-      <button class="nine number">9</button>
-      <button class="zero number">0</button>
-      <button class="subtraction action">-</button>
-      <button class="addition action">+</button>
-      <button class="equals">=</button>
-      <button class="multiplication action">*</button>
-      <button class="division action">/</button>
-      <button class="clear">C</button>
-      <button class="minus">+/-</button>
-      <button class="remove">x</button>
-      <button class="point">.</button>
-      <button class="percent">%</button>
+      <input type="text" class="text" value="0" inert>
+      <button class="btn one number">1</button>
+      <button class="btn two number">2</button>
+      <button class="btn three number">3</button>
+      <button class="btn four number">4</button>
+      <button class="btn five number">5</button>
+      <button class="btn six number">6</button>
+      <button class="btn seven number">7</button>
+      <button class="btn eight number">8</button>
+      <button class="btn nine number">9</button>
+      <button class="btn zero number">0</button>
+      <button class="btn subtraction action">-</button>
+      <button class="btn addition action">+</button>
+      <button class="btn equals">=</button>
+      <button class="btn multiplication action">x</button>
+      <button class="btn division action">/</button>
+      <button class="btn clear">C</button>
+      <button class="btn minus">+/-</button>
+      <button class="btn remove">del</button>
+      <button class="btn point">.</button>
+      <button class="btn percent">%</button>
     </div>
   </div>
 </body>
